--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ pretty_env_logger = "0.4.0"
 log = "0.4.17"
 serde_json = "1.0.82"
 serde = { version = "1.0.140", features = ["derive"] }
-ethers = "1.0.0" # TODO: remove
+octocrab = "0.30.1"
+chrono = "0.4.31"
